--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
+    "https-browserify": "^1.0.0",
     "react": "^19.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "stream-http": "^3.2.0",
+    "the-task-app": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +41,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.4",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^4.9.5"
   }
 }
